<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Veb ilovalar yaratish</string>
    <string name="html_kodini_kiriting">Enter HTML code</string>
    <string name="ishga_tushirish">Run</string>
    <string name="til">Language</string>
    <string name="bildirishnomalar">Notifications</string>
    <string name="bildirishnomalarni_yoqish">Enable notifications</string>
    <string name="mavzu">Theme</string>
    <string name="tungi_rejimni_yoqish">Enable dark mode</string>
    <string name="ilova_haqida">About the app</string>
    <string name="firstVersion">Version: 1.0.0</string>
    <string name="html_asoslari">HTML Basics</string>
    <string name="css_asoslari">CSS Basics</string>
    <string name="javascript_boshlang_ich">JavaScript Beginner</string>
    <string name="flexbox_to_liq">Complete Flexbox</string>
    <string name="grid_layout_asoslari">Grid Layout Basics</string>
    <string name="javascript_dom">JavaScript DOM</string>
    <string name="bootstrap_5">Bootstrap 5</string>
    <string name="git_github_asoslari">Git &amp; GitHub Basics</string>
    <string name="web_hosting_va_server">Web Hosting &amp; Server</string>
    <string name="react_js_asoslari">React JS Basics</string>
    <string name="vue_js_asoslari">Vue JS Basics</string>
    <string name="angular_asoslari">Angular Basics</string>
    <string name="savol_bu_yerda_chiqadi">The question will appear here</string>
    <string name="variant_1">Option 1</string>
    <string name="variant_2">Option 2</string>
    <string name="variant_3">Option 3</string>
    <string name="variant_4">Option 4</string>
    <string name="dars_nomi">Lesson name</string>
    <string name="item">item</string>
    <string name="darslar">Lessons</string>
    <string name="amaliyot">Practice</string>
    <string name="testlar">Tests</string>
    <string name="sozlamalar">Settings</string>
    <string name="videodarslar">Video Lessons</string>
    <string name="darsliklar">Textbooks</string>
    <string name="responsive_dizayn_nima">What is responsive design?</string>
    <string name="javascript_bilan_mini_project_calculator">Mini project with JavaScript: Calculator</string>
    <string name="_1_dars">Lesson 1</string>
    <string name="_2_dars">Lesson 2</string>
    <string name="_3_dars">Lesson 3</string>
    <string name="_4_dars">Lesson 4</string>
    <string name="_5_dars">Lesson 5</string>
    <string name="_6_dars">Lesson 6</string>
    <string name="_7_dars">Lesson 7</string>
    <string name="_8_dars">Lesson 8</string>
    <string name="_910_dars">Lesson 9,10</string>
    <string name="_11_dars">Lesson 11</string>
    <string name="_1213_dars">Lesson 12,13</string>
    <string name="_14_dars">Lesson 14</string>
    <string name="_15_dars">Lesson 15</string>
    <string name="_1617_dars">Lesson 16,17</string>
    <string name="webkirish">Introduction to web programming</string>
    <string name="webyaratish">Creating web applications</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="about">About</string>
    <string name="maslahatchi">Consultant</string>
    <string name="ilmiy_rahbar">Scientific Advisor</string>
    <string name="guruh">Group</string>
    <string name="dasturchi">Developer</string>
    <string name="about_app">This application was prepared for a graduation thesis.</string>
    <string name="bitiruv_malakaviy_ish_mavzusi">Graduation Thesis Topic</string>
    <string name="zamonaviy_dasturlash_tili_asosida_veb_ilovalar_yaratish_fanini_o_qitishga_mo_ljallangan_mobil_ilova_ishlab_chiqish">Development of a Mobile Application for Teaching "Web Application Development" Based on a Modern Programming Language</string>

</resources>
