<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.Settings">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:background="?android:attr/windowBackground">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="?android:attr/dividerVertical"
            android:showDividers="middle">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/til"
                style="@style/TextViewStyle"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingBottom="4dp"/>

            <Spinner
                android:id="@+id/language_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:listitem="@layout/spinner_item"
                tools:ignore="TouchTargetSizeCheck" />

            <!-- Bildirishnomalar -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bildirishnomalar"
                android:textSize="16sp"
                style="@style/TextViewStyle"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/notifications_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:text="@string/bildirishnomalarni_yoqish" />

            <!-- Dark Mode -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mavzu"
                style="@style/TextViewStyle"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"/>

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/dark_mode_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:text="@string/tungi_rejimni_yoqish" />

            <!-- Ilova haqida -->
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ilova_haqida"
                style="@style/TextViewStyle"
                android:textSize="16sp"
                android:textStyle="bold"
                android:paddingTop="16dp"
                android:paddingBottom="4dp"/>

            <TextView
                android:id="@+id/app_version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextViewStyle"
                android:text="@string/firstVersion"
                android:textSize="14sp"
                android:padding="8dp" />

        </LinearLayout>
    </ScrollView>


</FrameLayout>