<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.webilovalarishlabchiqish.app.fragments.About">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="20dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app"
            android:maxLines="2"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="20dp"
            android:layout_gravity="center_horizontal"
            style="@style/TextViewStyle"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            app:shapeAppearanceOverlay="@style/ShapeAppearance.Material3.Corner.ExtraLarge"
            android:src="@drawable/icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            style="@style/TextViewStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/firstVersion"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            style="@style/TextViewStyle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:weightSum="2"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bitiruv_malakaviy_ish_mavzusi"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:gravity="start"
                style="@style/TextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/zamonaviy_dasturlash_tili_asosida_veb_ilovalar_yaratish_fanini_o_qitishga_mo_ljallangan_mobil_ilova_ishlab_chiqish"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                style="@style/TextViewStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:weightSum="2"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dasturchi"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:gravity="start"
                style="@style/TextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="To'lqinov Azizbek"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                style="@style/TextViewStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:weightSum="2"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/guruh"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:gravity="start"
                style="@style/TextViewStyle"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="DI 12-21"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                style="@style/TextViewStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ilmiy_rahbar"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:gravity="start"
                style="@style/TextViewStyle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Sh.Ibotova"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                style="@style/TextViewStyle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:layout_gravity="center_horizontal"
            android:weightSum="2"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/maslahatchi"
                android:layout_gravity="center_vertical"
                android:layout_marginHorizontal="30dp"
                android:gravity="start"
                style="@style/TextViewStyle"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="R.Abdullayev"
                android:layout_marginHorizontal="30dp"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                style="@style/TextViewStyle"/>

        </LinearLayout>




    </LinearLayout>


</FrameLayout>